Fix right spacing of session bar in event page

--- a/indico/web/client/styles/modules/event_display/_common.scss
+++ b/indico/web/client/styles/modules/event_display/_common.scss
@@ -64,6 +64,7 @@
 .event-page-header {
     .session-bar {
         margin-top: 0;
+        margin-right: 0.8em;
     }
 
     .main-action-bar {
